%%{init: {'theme': 'base'}}%%

erDiagram
    USERS {
        uuid id PK
        varchar phone UK
        varchar email UK
        varchar password_hash
        varchar pin_hash
        varchar user_type
        varchar status
        timestamp created_at
        timestamp updated_at
    }

    USER_PROFILES {
        uuid id PK
        uuid user_id FK
        varchar first_name
        varchar last_name
        varchar business_name
        text address
        varchar city
        text profile_photo_url
        timestamp created_at
    }

    ROLES {
        uuid id PK
        varchar name UK
        text description
    }

    USER_ROLES {
        uuid user_id FK
        uuid role_id FK
    }

    PERMISSIONS {
        uuid id PK
        varchar name UK
        varchar resource
        varchar action
    }

    KYC_DOCUMENTS {
        uuid id PK
        uuid user_id FK
        varchar document_type
        varchar document_number
        text document_url
        date expiry_date
        varchar status
        uuid verified_by FK
        timestamp verified_at
        text rejection_reason
        timestamp created_at
    }

    KYC_VERIFICATIONS {
        uuid id PK
        uuid user_id FK
        varchar level
        varchar status
        uuid reviewer_id FK
        timestamp reviewed_at
        text notes
        timestamp created_at
    }

    WALLETS {
        uuid id PK
        uuid user_id FK
        varchar wallet_type
        varchar currency
        decimal balance
        decimal available_balance
        varchar status
        timestamp created_at
        timestamp updated_at
    }

    WALLET_TRANSACTIONS {
        uuid id PK
        uuid wallet_id FK
        uuid transaction_id FK
        varchar type
        decimal amount
        decimal balance_before
        decimal balance_after
        text description
        timestamp created_at
    }

    TRANSACTIONS {
        uuid id PK
        varchar reference UK
        varchar type
        varchar status
        uuid sender_wallet_id FK
        uuid receiver_wallet_id FK
        decimal amount
        decimal fee
        varchar currency
        text description
        jsonb metadata
        timestamp created_at
        timestamp completed_at
    }

    TRANSACTION_FEES {
        uuid id PK
        uuid transaction_id FK
        varchar fee_type
        decimal amount
        uuid beneficiary_wallet_id FK
    }

    AGENTS {
        uuid id PK
        uuid user_id FK
        varchar agent_code UK
        decimal commission_rate
        decimal daily_limit
        decimal monthly_limit
        varchar status
        decimal location_lat
        decimal location_lng
        timestamp created_at
    }

    AGENT_TRANSACTIONS {
        uuid id PK
        uuid agent_id FK
        uuid transaction_id FK
        varchar operation_type
        decimal commission_earned
        timestamp created_at
    }

    PRODUCTS {
        uuid id PK
        uuid merchant_id FK
        varchar name
        text description
        varchar category
        decimal price
        varchar unit
        int stock_quantity
        text image_url
        varchar status
        timestamp created_at
    }

    ORDERS {
        uuid id PK
        varchar order_number UK
        uuid buyer_id FK
        uuid seller_id FK
        varchar status
        decimal total_amount
        uuid transaction_id FK
        text delivery_address
        timestamp created_at
    }

    ORDER_ITEMS {
        uuid id PK
        uuid order_id FK
        uuid product_id FK
        int quantity
        decimal unit_price
        decimal total_price
    }

    NOTIFICATIONS {
        uuid id PK
        uuid user_id FK
        varchar type
        varchar title
        text body
        jsonb data
        varchar status
        timestamp sent_at
        timestamp read_at
        timestamp created_at
    }

    AUDIT_LOGS {
        uuid id PK
        uuid user_id FK
        varchar action
        varchar resource
        uuid resource_id
        inet ip_address
        text user_agent
        jsonb metadata
        timestamp created_at
    }

    USERS ||--o{ USER_PROFILES : has
    USERS ||--o{ USER_ROLES : has
    ROLES ||--o{ USER_ROLES : has
    USERS ||--o{ KYC_DOCUMENTS : submits
    USERS ||--o{ KYC_VERIFICATIONS : has
    USERS ||--o{ WALLETS : owns
    WALLETS ||--o{ WALLET_TRANSACTIONS : contains
    WALLETS ||--o{ TRANSACTIONS : sends
    WALLETS ||--o{ TRANSACTIONS : receives
    TRANSACTIONS ||--o{ TRANSACTION_FEES : has
    TRANSACTIONS ||--o{ WALLET_TRANSACTIONS : records
    USERS ||--o| AGENTS : is
    AGENTS ||--o{ AGENT_TRANSACTIONS : performs
    TRANSACTIONS ||--o{ AGENT_TRANSACTIONS : includes
    USERS ||--o{ PRODUCTS : sells
    USERS ||--o{ ORDERS : places
    USERS ||--o{ ORDERS : fulfills
    ORDERS ||--o{ ORDER_ITEMS : contains
    PRODUCTS ||--o{ ORDER_ITEMS : includes
    TRANSACTIONS ||--o| ORDERS : pays
    USERS ||--o{ NOTIFICATIONS : receives
    USERS ||--o{ AUDIT_LOGS : generates
